// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty table if no sources are provided 1`] = `
<div
  className="table-responsive"
>
  <table
    className="sources-table table table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          Indicator
        </th>
        <th>
          Updated On
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`renders correctly when the sources are updated 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="sources-table table table-striped table-hover"
    >
      <thead>
        <tr>
          <th>
            Indicator
          </th>
          <th>
            Updated On
          </th>
          <th>
            Actions
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Common Reporting Standard
            <span
              class="text-uppercase"
            >
               (crs)
            </span>
          </td>
          <td>
            Sun Aug 19 2018
          </td>
          <td>
            <button
              class="btn btn-outline-success btn-sm"
              data-testid="sources-table-row"
              type="button"
            >
              Metadata
            </button>
            <button
              class="btn btn-outline-success btn-sm"
              type="button"
            >
              Datasets
            </button>
          </td>
        </tr>
        <tr>
          <td>
            World Bank Indicators
            <span
              class="text-uppercase"
            >
               (wdi)
            </span>
          </td>
          <td>
            Sun Aug 19 2018
          </td>
          <td>
            <button
              class="btn btn-outline-success btn-sm"
              data-testid="sources-table-row"
              type="button"
            >
              Metadata
            </button>
            <button
              class="btn btn-outline-success btn-sm"
              type="button"
            >
              Datasets
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Official Development Assistance
            <span
              class="text-uppercase"
            >
               (DAC1)
            </span>
          </td>
          <td>
            Sun Aug 19 2018
          </td>
          <td>
            <button
              class="btn btn-outline-success btn-sm"
              data-testid="sources-table-row"
              type="button"
            >
              Metadata
            </button>
            <button
              class="btn btn-outline-success btn-sm"
              type="button"
            >
              Datasets
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders correctly with default props 1`] = `
<div
  className="table-responsive"
>
  <table
    className="sources-table table table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          Indicator
        </th>
        <th>
          Updated On
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Common Reporting Standard
          <span
            className="text-uppercase"
          >
             (crs)
          </span>
        </td>
        <td>
          Sun Aug 19 2018
        </td>
        <td>
          <button
            className="btn btn-outline-success btn-sm"
            data-testid="sources-table-row"
            disabled={false}
            type="button"
          >
            Metadata
          </button>
          <button
            className="btn btn-outline-success btn-sm"
            disabled={false}
            type="button"
          >
            Datasets
          </button>
        </td>
      </tr>
      <tr>
        <td>
          World Bank Indicators
          <span
            className="text-uppercase"
          >
             (wdi)
          </span>
        </td>
        <td>
          Sun Aug 19 2018
        </td>
        <td>
          <button
            className="btn btn-outline-success btn-sm"
            data-testid="sources-table-row"
            disabled={false}
            type="button"
          >
            Metadata
          </button>
          <button
            className="btn btn-outline-success btn-sm"
            disabled={false}
            type="button"
          >
            Datasets
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
